--- a/web_fun/core-assignment/week2/day1/likes/style.css
+++ b/web_fun/core-assignment/week2/day1/likes/style.css
@@ -1,27 +1,54 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
-.container{
-    border: solid black;
-    width: 50%;
-    height: 90px;
-    margin: 10% auto;
+body{
+    width: 1200px;
+    margin: 0 auto;
+}
+nav{
+    background-color: black;
+    color: white;
+    height: 50px;
     padding: 20px;
+    margin-bottom: 20px;
 }
-.flex{
-    display:flex;
+.titre{
+    text-align: center;
+}
+.container {
+    border: 2px solid black;
+    width: 500px;
+    margin: 30px 0px 30px auto;
+    padding: 30px
+}
+.flex {
+    display: flex;
 }
 .space-between{
     justify-content: space-between;
 }
-.topright{
+.right {
     width: 200px;
 }
-button{
-    width: 70px;
-    background-color: yellow;
+.top {
+    margin-bottom:20px ;
 }
-p{
-    margin-top: 20px;
+.yellow{
+    background-color: yellow;
+    width: 60px;
+}
+.boxes {
+    flex:2;
+}
+.left {
+    flex: 1;
+    border: 2px solid black;
+    margin: 30px 0px;
+    height: 200px;
+    text-align: center;
+    padding: 20px;
+}
+img{
+    height: 100px;
 }
